# gozed

./: .gitignore  priv_sample.json  pyproject.toml  queries_sample.json  settings_sample.json
src/: gozed.py
